--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FitApp</string>
-    <string name="loading">загрузка</string>
+    <string name="loading">loading</string>
+    <string name="auth_message">Authorization</string>
+    <string name="loading_content">Loading fit plans</string>
 </resources>
